extensive work on emailing
Front-end password show/hide mostly implemented and secured in terms of
save/load. On the back end, get the format string parser working, and a
little bit of work on other infrastructure as well.

I will clean up the format-string parser's docstring in the next commit,
as I had been taking a bunch of notes there on what was required that I
want to save just in case I want them later, so they are preserved in
this commit.

--- a/designer/emailopts.ui
+++ b/designer/emailopts.ui
@@ -160,7 +160,10 @@ QGroupBox::title {
          </widget>
         </item>
         <item row="5" column="1">
-         <widget class="QLineEdit" name="passwordBox">
+         <widget class="PasswordSafeQLineEdit" name="passwordBox">
+          <property name="contextMenuPolicy">
+           <enum>Qt::NoContextMenu</enum>
+          </property>
           <property name="echoMode">
            <enum>QLineEdit::Password</enum>
           </property>
@@ -296,6 +299,13 @@ QGroupBox::title {
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>PasswordSafeQLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header>ui/emailing</header>
+  </customwidget>
+ </customwidgets>
  <tabstops>
   <tabstop>fromNameBox</tabstop>
   <tabstop>fromAddrBox</tabstop>
