--- a/designer/emailopts.ui
+++ b/designer/emailopts.ui
@@ -162,7 +162,7 @@ QGroupBox::title {
         <item row="5" column="1">
          <widget class="PasswordSafeQLineEdit" name="passwordBox">
           <property name="contextMenuPolicy">
-           <enum>Qt::NoContextMenu</enum>
+           <enum>Qt::CustomContextMenu</enum>
           </property>
           <property name="echoMode">
            <enum>QLineEdit::Password</enum>
