continue work on emailing; change db access functions
Whoa! Implementing a progress bar has brought to light a number of
not-so-great things about my application; mostly, that the db
functionality isn't thread-safe at all, since there's only one
connection. That has not been fixed in this commit, but I think now that
queries are run through a method of a persistent class, it should be
relatively easy to add functionality to that class that can open a
second connection if it's necessary to allow a different thread to
access it.

--- a/designer/busy.ui
+++ b/designer/busy.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>240</width>
-    <height>68</height>
+    <width>293</width>
+    <height>104</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,9 +17,9 @@
    <item>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <widget class="QLabel" name="label">
+      <widget class="QLabel" name="progressLabel">
        <property name="text">
-        <string>Running LaTeX, please wait...</string>
+        <string>Sending email...</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -36,6 +36,30 @@
        </property>
        <property name="textVisible">
         <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="cancelButton">
+       <property name="text">
+        <string>Cancel</string>
        </property>
       </widget>
      </item>
