--- a/designer/prefs.ui
+++ b/designer/prefs.ui
@@ -14,27 +14,14 @@
    <string>Preferences</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0" colspan="2">
-    <widget class="QCheckBox" name="debugMode">
-     <property name="toolTip">
-      <string>Show debug menu and functions, for use in active development.</string>
-     </property>
-     <property name="text">
-      <string>&amp;Debug mode</string>
-     </property>
-     <property name="tristate">
-      <bool>false</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="5" column="1">
+   <item row="6" column="1">
     <widget class="QPushButton" name="okButton">
      <property name="text">
       <string>&amp;OK</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="2">
+   <item row="3" column="2">
     <widget class="QSpinBox" name="saveInterval">
      <property name="toolTip">
       <string>When making a change, if this many minutes have elapsed since the last save,
@@ -49,14 +36,27 @@ always saved on program exit.</string>
      </property>
     </widget>
    </item>
-   <item row="5" column="2">
+   <item row="0" column="0" colspan="2">
+    <widget class="QCheckBox" name="debugMode">
+     <property name="toolTip">
+      <string>Show debug menu and functions, for use in active development.</string>
+     </property>
+     <property name="text">
+      <string>&amp;Debug mode</string>
+     </property>
+     <property name="tristate">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="2">
     <widget class="QPushButton" name="cancelButton">
      <property name="text">
       <string>&amp;Cancel</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="0" colspan="2">
+   <item row="3" column="0" colspan="2">
     <widget class="QLabel" name="label">
      <property name="text">
       <string>Minutes between &amp;saves</string>
@@ -66,7 +66,7 @@ always saved on program exit.</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="1">
+   <item row="4" column="1">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -86,6 +86,17 @@ always saved on program exit.</string>
      </property>
      <property name="text">
       <string>&amp;Auto-select answer A</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0" colspan="2">
+    <widget class="QCheckBox" name="savePasswords">
+     <property name="toolTip">
+      <string>Save entered SMTP server passwords in the database.
+Passwords are stored in plaintext but are not viewable except by directly accessing the database.</string>
+     </property>
+     <property name="text">
+      <string>Save email &amp;passwords</string>
      </property>
     </widget>
    </item>
