behavior on starting with no saved db; fix new/open/backup
- We now ask the user if he wants to create a new database, open an
existing one, or quit when starting with no config.

- New, open, and backup didn't get updated for the d.inter() change and
didn't work anymore; now fixed.

--- a/designer/mw.ui
+++ b/designer/mw.ui
@@ -201,7 +201,7 @@
   </action>
   <action name="actionBackup">
    <property name="text">
-    <string>&amp;Back up DB...</string>
+    <string>&amp;Back Up Database...</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+B</string>
