remove ellipses after 'manual'
Since it doesn't open a dialog but rather immediately opens a browser,
it's not supposed to have them.

--- a/designer/mw.ui
+++ b/designer/mw.ui
@@ -193,7 +193,7 @@
   </action>
   <action name="actionManual">
    <property name="text">
-    <string>&amp;Manual...</string>
+    <string>&amp;Manual</string>
    </property>
    <property name="shortcut">
     <string>F1</string>
