--- a/designer/editset.ui
+++ b/designer/editset.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1025</width>
-    <height>612</height>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -232,6 +232,9 @@ QGroupBox::title {
             <property name="toolTip">
              <string/>
             </property>
+            <property name="whatsThis">
+             <string/>
+            </property>
             <property name="tabChangesFocus">
              <bool>true</bool>
             </property>
@@ -247,42 +250,6 @@ QGroupBox::title {
             </property>
            </widget>
           </item>
-          <item row="1" column="2">
-           <spacer name="horizontalSpacer">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>148</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item row="1" column="1">
-           <widget class="QSpinBox" name="difficultySpinner">
-            <property name="enabled">
-             <bool>true</bool>
-            </property>
-            <property name="minimumSize">
-             <size>
-              <width>65</width>
-              <height>0</height>
-             </size>
-            </property>
-            <property name="toolTip">
-             <string>This parameter is not yet implemented.</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="0">
-           <widget class="QLabel" name="label_3">
-            <property name="text">
-             <string>Difficulty</string>
-            </property>
-           </widget>
-          </item>
          </layout>
         </item>
         <item>
@@ -290,10 +257,13 @@ QGroupBox::title {
           <property name="orientation">
            <enum>Qt::Vertical</enum>
           </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::Fixed</enum>
+          </property>
           <property name="sizeHint" stdset="0">
            <size>
             <width>20</width>
-            <height>40</height>
+            <height>10</height>
            </size>
           </property>
          </spacer>
@@ -553,7 +523,7 @@ QGroupBox::title {
           <property name="sizeHint" stdset="0">
            <size>
             <width>20</width>
-            <height>30</height>
+            <height>40</height>
            </size>
           </property>
          </spacer>
@@ -643,7 +613,6 @@ QGroupBox::title {
   <tabstop>genQuizButton</tabstop>
   <tabstop>randomizeButton</tabstop>
   <tabstop>questionBox</tabstop>
-  <tabstop>difficultySpinner</tabstop>
   <tabstop>answerA</tabstop>
   <tabstop>answerB</tabstop>
   <tabstop>answerC</tabstop>
